# brazil-ddd-codes

./: .gitignore  AGENTS.md  DDD_DECK_PLAN.md  DDD_NOTE_TYPE.md  Makefile  README.md  pyproject.toml
.github/workflows/: anki-workbench.yml
data/: README.md
data/raw/: Codigos_Nacionais.csv  ddd_codes.csv  map_asset_sources.csv  reference_data_sources.csv
media/: README.md
release/: ankiweb.md
scripts/: build_apkg.py  capture_readme_screenshot.py  fetch_map_assets.py  fetch_reference_data.py  generate_maps.py  inspect_source_svg.py
