[project]
name = "brazil-ddd-codes"
version = "0.1.0"
description = "Tools to build an Anki deck for Brazilian DDD telephone area codes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
deck = [
  "genanki>=0.13.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100
