[project]
name = "brazil-ddd-codes"
version = "0.1.0"
description = "Tools to build an Anki deck for Brazilian DDD telephone area codes."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
deck = [
  "genanki>=0.13.0",
]
dev = [
  "anki-addon-workbench[gui]==0.4.0",
  "mypy>=1.13.0",
  "ruff>=0.6.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.uv.pip]
exclude-newer = "7 days"

[tool.anki-addon-workbench]
project_name = "Brazil DDD Codes"
seed_apkgs = ["out/brazil-ddd-codes.apkg"]
anki_version = "25.09"
docker_image = "brazil-ddd-codes-anki-workbench"
docker_workbench_spec = "anki-addon-workbench[gui]==0.4.0"
deck_smoke_render_limit = 3

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = false
